Revert "Feature/exclude db from git"

--- a/Kategorien/Aus_aller_Welt.html
+++ b/Kategorien/Aus_aller_Welt.html
@@ -108,12 +108,12 @@
             <!-- CSSMap - Continents -->
 <div id="map-continents">
     <ul class="continents">
-     <li class="c1"><a href="../temp2.html?filter=origin&value=af">Afrika</a></li>
-     <li class="c2"><a href="../temp2.html?filter=origin&value=as">Asien</a></li>
-     <li class="c3"><a href="../temp2.html?filter=origin&value=au">Australien</a></li>
-     <li class="c4"><a href="../temp2.html?filter=origin&value=eu">Europa</a></li>
-     <li class="c5"><a href="../temp2.html?filter=origin&value=na">Nord America</a></li>
-     <li class="c6"><a href="../temp2.html?filter=origin&value=sa">Süd America</a></li>
+     <li class="c1"><a href="Aus_aller_Welt/Afrika.html">Afrika</a></li>
+     <li class="c2"><a href="Aus_aller_Welt/Asien.html">Asien</a></li>
+     <li class="c3"><a href="Aus_aller_Welt/Australien.html">Australien</a></li>
+     <li class="c4"><a href="Aus_aller_Welt/Europa.html">Europa</a></li>
+     <li class="c5"><a href="Aus_aller_Welt/Nordamerika.html">Nord America</a></li>
+     <li class="c6"><a href="Aus_aller_Welt/Südamerika.html">Süd America</a></li>
     </ul>
    </div>
    <!-- END OF THE CSSMap - Continents -->     
