--- a/Kategorien.html
+++ b/Kategorien.html
@@ -105,19 +105,19 @@
             <div class="row">
                 <div class="column">
                     <a href="Kategorien/Nach_Art.html">
-                        <img src="img\Rezepte\gerichtsart.jpg">
+                        <img src="img/1st/art.jpg">
                         <figcaption>Nach Art</figcaption>
                     </a>
                 </div>
                 <div class="column">
                     <a href="+suche.html">
-                        <img src="img\Rezepte\zutat.jpg">
+                        <img src="img/1st/zutat.jpg">
                         <figcaption>Nach Zutaten</figcaption>
                     </a>
                 </div>
                 <div class="column">
                     <a href="Kategorien/Aus_aller_Welt.html">
-                        <img src="img\Rezepte\welt.jpg">
+                        <img src="img/1st/welt.jpeg">
                         <figcaption>Aus aller Welt</figcaption>
                     </a>
                 </div>
@@ -126,19 +126,19 @@
             <div class="row">
                 <div class="column">
                     <a href="Kategorien/Für_besondere_Anlässe.html">
-                        <img src="img\Rezepte\festessen.jpg">
+                        <img src="img/1st/anlass.JPG">
                         <figcaption>Für besondere Anlässe</figcaption>
                     </a>
                 </div>
                 <div class="column">
                     <a href="Kategorien/Ernährung_&_Allergien.html">
-                        <img src="img\Rezepte\allergien.jpg">
+                        <img src="img/1st/Allergy.jpg">
                         <figcaption>Ernährung & Allergie</figcaption>
                     </a>
                 </div>
                 <div class="column">
                     <a href="Kategorien/Drinks_&_Desserts.html">
-                        <img src="img\Rezepte\dessert.jpg">
+                        <img src="img/1st/d&d.jpg">
                         <figcaption>Drinks & Desserts</figcaption>
                     </a>
                 </div>
