--- a/Kategorien/Drinks_&_Desserts.html
+++ b/Kategorien/Drinks_&_Desserts.html
@@ -83,25 +83,25 @@
                  
                 <div class="row">
                     <div class="column" >
-                            <a href="../temp2.html"><img src="../img\Rezepte\gerichtsart.jpg"><figcaption>Cocktails</figcaption></a>
+                            <a href="../temp2.html"><img src="../img/D&D/Cocktails.jpg"><figcaption>Cocktails</figcaption></a>
                         </div>
                     <div class="column">
-                        <a href="../temp2.html"><img src="../img\Rezepte\zutat.jpg"><figcaption>Mocktails</figcaption></a>
+                        <a href="../temp2.html"><img src="../img/D&D/Mocktails.jpg"><figcaption>Mocktails</figcaption></a>
                     </div>
                 <div class="column">
-                        <a href="../temp2.html"><img src="../img\Rezepte\welt.jpg"><figcaption>Säfte & Smoothies</figcaption></a>
+                        <a href="../temp2.html"><img src="../img/D&D/smoothie.jpg"><figcaption>Säfte & Smoothies</figcaption></a>
                     </div>
                 </div>
 
             <div class="row">
                     <div class="column" >
-                            <a href="../temp2.html"><img src="../img\Rezepte\festessen.jpg"><figcaption>Torten, Kuchen & Wähen</figcaption></a>
+                            <a href="../temp2.html"><img src="../img/D&D/Cake2.jpg"><figcaption>Torten, Kuchen & Wähen</figcaption></a>
                         </div>
                     <div class="column" >
-                            <a href="../temp2.html"><img src="../img\Rezepte\allergien.jpg"><figcaption>Kühle Köstlichkeiten</figcaption></a>
+                            <a href="../temp2.html"><img src="../img/D&D/KK.jpg"><figcaption>Kühle Köstlichkeiten</figcaption></a>
                         </div>
                     <div class="column" >
-                        <a href="../temp2.html"><img src="../img\Rezepte\dessert.jpg"><figcaption>Sonstiges</figcaption></a>
+                        <a href="../temp2.html"><img src="../img\Rezepte\dessert.jpg"><figcaption>Sonstige Desserts</figcaption></a>
                     </div>
                 
             </div>   
