--- a/Kategorien/Für_besondere_Anlässe.html
+++ b/Kategorien/Für_besondere_Anlässe.html
@@ -83,25 +83,25 @@
                  
                 <div class="row">
                     <div class="column" >
-                            <a href="../temp2.html"><img src="../img\anlass/christmas-dinner-2428029_960_720.jpg"><figcaption>Festtage</figcaption></a>
+                            <a href="../temp2.html?filter=anlass&value=FT"><img src="../img/Anlass/christmas-dinner-2428029_960_720.jpg"><figcaption>Festtage</figcaption></a>
                         </div>
                     <div class="column">
-                        <a href="../temp2.html"><img src="../img\anlass/candlelight.jpg"><figcaption>CandleLight</figcaption></a>
+                        <a href="../temp2.html?filter=anlass&value=CL"><img src="../img/Anlass/candlelight.jpg"><figcaption>CandleLight</figcaption></a>
                     </div>
                 <div class="column">
-                        <a href="../temp2.html"><img src="../img\anlass/dinnerparty.jpg"><figcaption>Dinnerparty</figcaption></a>
+                        <a href="../temp2.html?filter=anlass&value=DP"><img src="../img/Anlass/dinnerparty.jpg"><figcaption>Dinner Party</figcaption></a>
                     </div>
                 </div>
 
             <div class="row">
                     <div class="column" >
-                            <a href="../temp2.html"><img src="../img\Rezepte\festessen.jpg"><figcaption>Picnic</figcaption></a>
+                            <a href="../temp2.html?filter=anlass&value=PN"><img src="../img/Anlass/picnic.jpg"><figcaption>Picnic</figcaption></a>
                         </div>
                     <div class="column" >
-                            <a href="../temp2.html"><img src="../img\Rezepte\allergien.jpg"><figcaption>Kochen im Freien</figcaption></a>
+                            <a href="../temp2.html?filter=anlass&value=KF"><img src="../img/Anlass/outdoor.jpg"><figcaption>Kochen im Freien</figcaption></a>
                         </div>
                     <div class="column" >
-                        <a href="../temp2.html"><img src="../img\Rezepte\dessert.jpg"><figcaption>Sonntags Brunch</figcaption></a>
+                        <a href="../temp2.html?filter=anlass&value=SB"><img src="../img/Anlass/(Brunch).jpg"><figcaption>Sonntags Brunch</figcaption></a>
                     </div>
                 
             </div>   
