--- a/Kategorien/Nach_Art.html
+++ b/Kategorien/Nach_Art.html
@@ -91,20 +91,20 @@
 
             <div class="row">
                 <div class="column">
-                    <a href="../temp2.html">
+                    <a href="../temp2.html?filter=art&value=gebacken">
                         <img src="../img\Rezepte\gebacken.jpg">
                         <figcaption>Gebacken</figcaption>
                     </a>
                 </div>
                          <div class="column">
-                    <a href="../temp2.html">
+                    <a href="../temp2.html?filter=art&value=grilliert">
                         <img src="../img\Rezepte\BBQ2.jpg">
                         <figcaption>Grilliert</figcaption>
                     </a>
                 </div>
           
             <div class="column">
-                <a href="../temp2.html">
+                <a href="../temp2.html?filter=art&value=frittiert">
                     <img src="../img\Rezepte\frittiert.jpg">
                     <figcaption>Frittiert</figcaption>
                 </a>
@@ -112,20 +112,20 @@
         </div>
             <div class="row">
                 <div class="column">
-                    <a href="../temp2.html">
+                    <a href="../temp2.html?filter=art&value=gebraten">
                         <img src="../img\Rezepte\gebraten.jpg">
                         <figcaption>Gebraten</figcaption>
                     </a>
                 </div>
                 <div class="column">
-                    <a href="../temp2.html">
+                    <a href="../temp2.html?filter=art&value=gedaempft">
                         <img src="../img\Rezepte\nikuman.jpg">
                         <figcaption>Gedämpt</figcaption>
                     </a>
 
                 </div>
                 <div class="column">
-                    <a href="../temp2.html">
+                    <a href="../temp2.html?filter=art&value=gekocht">
                         <img src="../img\Rezepte\boiling2.jpg">
                         <figcaption>Gekocht</figcaption>
                     </a>
