--- a/Home.html
+++ b/Home.html
@@ -98,7 +98,7 @@
 
   <!-- Slide -->
 
-  <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+    <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class=""></li>
       <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
@@ -108,12 +108,12 @@
       <div class="carousel-item">
         <div class="slideshow-wrapper">
           <div class="gradient">
-            <img class="first-slide" src="img/Rezepte/fries.png" alt="First slide">
+            <img class="first-slide" src="img/FrontPage/Plov2.jpg" alt="First slide">
           </div>
         </div>
         <div class="container">
           <div class="carousel-caption text-left">
-            <div class=a bstand>
+            <div class=abstand>
               <h2>
                 <span>Example headline.</span>
               </h2>
@@ -129,12 +129,12 @@
       <div class="carousel-item active">
         <div class="slideshow-wrapper">
           <div class="gradient">
-            <img class="first-slide" src="img/Rezepte/fries.png" alt="Second slide">
+            <img class="first-slide" src="img/FrontPage/GrilledPineapple2.jpg" alt="Second slide">
           </div>
         </div>
         <div class="container">
           <div class="carousel-caption">
-            <div class=a bstand>
+            <div class=abstand>
               <h2>
                 <span>Another example headline.</span>
               </h2>
@@ -150,12 +150,12 @@
       <div class="carousel-item">
         <div class="slideshow-wrapper">
           <div class="gradient">
-            <img class="first-slide" src="img/Rezepte/fries.png" alt="Third slide">
+            <img class="first-slide" src="img/FrontPage/Puttanesca2.jpg" alt="Third slide">
           </div>
         </div>
         <div class="container">
           <div class="carousel-caption text-right">
-            <div class=a bstand>
+            <div class=abstand>
               <h2>
                 <span>One more for good measure.</span>
               </h2>
@@ -178,7 +178,6 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-
   <!-- Marketing messaging and featurettes
       ================================================== -->
   <!-- Wrap the rest of the page in another container to center all the content. -->
